# RP2040-air-quality-monitor

./: Air-Quality-Monitor.c  CMakeLists.txt  FreeRtosConfig.h  README.md  gfxconf.h  ugfx_import.cmake
drivers/: CMakeLists.txt  README.md
drivers/BME688/: BME680.c  BME680.h  BME68xBSEC.c  BME68xBSEC.h  CMakeLists.txt
drivers/I2C-Mutex/: CMakeLists.txt  I2C-Mutex.h
drivers/ILI9341/: CMakeLists.txt  board_ILI9341.h  gdisp_lld_ILI9341.c
drivers/PMS25AQI/: CMakeLists.txt  PMS25AQI.c  PMS25AQi.h
drivers/SCD41/: CMakeLists.txt  SCD41.c  SCD41.h
drivers/SGP40/: CMakeLists.txt  SGP40.c  SGP40.h  sensirion_gas_index_algorithm.h
drivers/TSC2007/: CMakeLists.txt  TSC2007.h  gmouse_lld_TSC2007.c  gmouse_lld_TSC2007_board.h
